refactor: cleanup code for AdminClientKafkaTopicController